--- a/public/style.css
+++ b/public/style.css
@@ -558,6 +558,7 @@ width: 400px;
   align-items: center;
   margin-top: 20px;
   width: 500px;
+  gap: 20px;
 }
 .cont a:hover {
   background-color: rgb(0, 38, 255);
