--- a/public/style.css
+++ b/public/style.css
@@ -549,6 +549,7 @@ width: 400px;
 }
 .cont a {
   display: flex;
+  flex-direction: column;
   text-decoration: none;
   background-color: blue;
   color: white;
@@ -556,9 +557,9 @@ width: 400px;
   border-radius: 20px;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
-  width: 500px;
-  gap: 20px;
+  margin-top: 0;
+  width: 90%;
+  max-width: 500px;
 }
 .cont a:hover {
   background-color: rgb(0, 38, 255);
@@ -571,6 +572,7 @@ width: 400px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 /*......home  image design.............*/
 .home-image{
