--- a/public/style.css
+++ b/public/style.css
@@ -404,7 +404,7 @@ margin: 0 auto;
   border-radius: 12px;
   padding: 30px;
   background-color: purple;
-  width: 300px;
+  width: 90%;
   margin: 0 auto;
 }
 /*about .........info............. design*/
