--- a/public/style.css
+++ b/public/style.css
@@ -409,6 +409,7 @@ margin: 0 auto;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: clamp(1.5rem,4vw,2.5rem);
 }
 /*about .........info............. design*/
 .aboutinfo{
