--- a/public/style.css
+++ b/public/style.css
@@ -399,12 +399,12 @@ margin: 0 auto;
 
 }
 /*contact............ us....... word......... style*/
-.cu{
+.cu{display: flex;
+  flex-direction: column;
   color: whitesmoke;
   border-radius: 12px;
   padding: 30px;
   background-color: purple;
-  width: 90%;
   margin: 0 auto;
   white-space: nowrap;
   overflow: hidden;
@@ -516,6 +516,16 @@ width: 400px;
   padding: 20px;
   text-align: left;
   
+}
+.our-service-head h2{
+  font-size: 2rem;
+  white-space: nowrap;
+  text-align: center;
+}
+@media  (max-width:480){
+  our .service-head h2{
+font-size: 1.5rem;
+  }
 }
 .all-services h3{
   color: blueviolet;
