--- a/public/style.css
+++ b/public/style.css
@@ -405,11 +405,8 @@ margin: 0 auto;
   border-radius: 12px;
   padding: 30px;
   background-color: purple;
-  margin: 0 auto;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: clamp(1.5rem,4vw,2.5rem);
+  width: 40%;
+
 }
 /*about .........info............. design*/
 .aboutinfo{
