--- a/public/style.css
+++ b/public/style.css
@@ -739,6 +739,7 @@ margin-bottom: 40px;
   margin-bottom: 60px;
   justify-content: center;
   background-color:lightblue;
+  width: 100%;
   padding: 30px;
   border-radius: 15px;
   gap: 10px;
